<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" 
    android:id="@+id/activityBible">

    <WebView
        android:id="@+id/webViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_above="@+id/btn_next_verse"
        android:scrollbars="vertical"
         />
    <Button
        android:id="@+id/btn_next_verse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/next_verse"
        />
    
    <Button
        android:id="@+id/btn_prev_verse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/prev_verse"
         />

    <Button
        android:id="@+id/btn_change_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btn_prev_verse"
        android:text="@string/change_book" />

    <Button
        android:id="@+id/btn_change_chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/btn_next_verse"
        android:text="@string/change_chapter" />

</RelativeLayout>
