<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#61392d">

    <ImageView
        android:id="@+id/img_start_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bible_startlogo"
        android:contentDescription="@string/bible_startimage" />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:orientation="vertical" >

       <Button
           android:id="@+id/btn_bible"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:text="@string/bible_button"
           android:background="@android:drawable/btn_default" />

       <Button
           android:id="@+id/btn_stfathers"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:text="@string/stfathers_button"
           android:background="@android:drawable/btn_default" />
   </LinearLayout>

</RelativeLayout>
